overflow fix

--- a/nextjs/components/Layout/Layout/Layout.scss
+++ b/nextjs/components/Layout/Layout/Layout.scss
@@ -9,7 +9,7 @@
     flex: 1;
   }
 
-  &--is-overflow {
+  &--is-overflow-initial {
     overflow-x: initial;
   }
 }
